--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,9 +1,10 @@
 .social {
-
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
   gap: 28px;
   align-items: center;
+  max-width: 107px;
   padding: 0;
   margin: 0;
   list-style: none;
